<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bloggles</string>
    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="account_settings">Account Settings</string>
    <string name="blog_settings">Blog Settings</string>
    <string name="register">Register</string>
    <string name="logout">Log Out</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="retype_hint">Retype Password</string>
    <string name="hint_title">Title</string>
    <string name="hint_desc">Description</string>
    <string name="hint_currentPassword">Current</string>
    <string name="hint_newPassword">New</string>
    <string name="hint_retypeNewPassword">Retype New</string>
    <string name="login_label">Login</string>
    <string name="register_text">No account yet? Register here.</string>
    <string name="spinner_title">Select timezone:</string>
    <string name="label_firstName">First Name</string>
    <string name="label_lastName">Last Name</string>
    <string name="label_name">Jane Doe</string>
    <string name="label_username">janedoe99</string>
    <string name="label_password">Password</string>
    <string name="label_memberSince">Member since</string>
    <string name="label_lastLogin">Last login</string>
    <string name="label_blogPosts">Blog posts</string>
    <string name="label_lastPosted">Date Last Posted</string>
    <string name="label_numberOfFollowers">Followers</string>
    <string name="value_memberSince">December 1, 2013</string>
    <string name="value_lastLogin">December 17, 2013</string>
    <string name="value_lastPosted">December 17, 2013</string>
    <string name="value_blogPosts">12</string>
    <string name="value_numberOfFollowers">218</string>
    <string name="button_view">View</string>
    <string name="button_follow">Follow</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_change">Change</string>
    <string name="title_activity_view_post">ViewPostActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
