<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/header_background" 
    android:layout_gravity="center"
    android:padding="10dp"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/bloggles_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:src="@drawable/bloggles_logo"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPersonName"
        android:hint="@string/username_hint"
        android:textColor="@color/white"
        android:textSize="15sp">
    </EditText>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword" 
        android:hint="@string/password_hint"
        android:textColor="@color/white"
        android:textSize="15sp">
    </EditText>
    
    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/button_shadow"
        android:text="@string/login_label"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:gravity="center_horizontal">
    	<TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7pt"
        android:text="No account yet?"
        android:textColor="@color/content_background"
        android:textSize="12sp"
        android:textStyle="bold" />    
        <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_label"
        android:layout_alignBottom="@+id/register_label"
        android:layout_toRightOf="@+id/register_label"
        android:layout_marginLeft="2pt"
        android:clickable="true"
        android:text="Register here!"
        android:textColor="@color/links"
        android:textSize="12sp"
        android:textStyle="bold|italic" />
    </RelativeLayout>
</RelativeLayout>